# RNA

./: .gitignore  Cargo.toml  game_of_life.comp
shaders/: static_2d_grid.comp
src/: advanced_channels.rs  automaton.rs  commands.rs  conway.rs  game_of_life.rs  heat_dispersion.rs  lib.rs  main.rs  simulator.rs  terminal_ui.rs  ui.rs  universe.rs
src/automaton/: game_of_life.rs  von_neumann.rs
src/game_of_life/: static_2d_grid.rs
src/grid/: grid.rs  grid_history.rs  grid_view.rs  mod.rs
src/simulator/: advanced_channels.rs  async_simulator.rs  automaton.rs  compute.rs  cpu.rs  cpu_simulator.rs  gpu_simulator.rs  grid.rs  mod.rs  simulator.rs  sync_simulator.rs  twoway_channel.rs  universe_history.rs
src/simulator/gpu/: compute.rs  mod.rs
src/simulator/grid/: grid_view.rs  mod.rs
src/terminal_ui/: mod.rs  module.rs  styled_text.rs
src/universe/: grid2d.rs  manager.rs  simulator.rs
src/universe/grid2d/: infinite_grid2d.rs  static_2d_grid.rs  static_grid.rs  static_grid2d.rs
