[package]
name = "cell"
version = "0.1.0"
authors = ["Lucas Ramirez <lucas.ramirez@epfl.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.16"
cascade = "0.1.4"
vulkano = "0.18.0"
vulkano-shaders = "0.18.0"
winit = "0.22"
vulkano-win = "0.18.0"
